--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - "8080:8080"
     depends_on:
       - ewm-db
+      - stats-db
     environment:
       - DB_HOST=db-service
       - DB_PORT=5432
