--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
   stats-db:
     image: postgres:14-alpine
     container_name: db-stat
-    #volumes:
-    #  - /var/lib/postgresql/data/#  - "5531:5531"
+    volumes:
+      - /var/lib/postgresql/data/
     ports:
       - "5541:5432"
     environment:
