--- a/statistics/src/main/resources/application.properties
+++ b/statistics/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#shareit-server.url=http://localhost:9090
+shareit-server.url=http://localhost:9090
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -8,7 +8,7 @@ spring.sql.init.mode=always
 # TODO Append connection to DB
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5431/statistic
+#spring.datasource.url=jdbc:postgresql://localhost:5432/statistic
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/statistic
 spring.datasource.username=postgres
 spring.datasource.password=postgres
