--- a/statistics/src/main/resources/application.properties
+++ b/statistics/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-shareit-server.url=http://localhost:9090
+#shareit-server.url=http://localhost:9090
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
