Димломный проект - ExploreWithMe. Добавление коментариев.

--- a/ewm/src/main/resources/application.properties
+++ b/ewm/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#shareit-server.url=http://localhost:9090
-shareit-server.url=http://${STAT_HOST}:${STAT_PORT}
+shareit-server.url=http://localhost:9090
+#shareit-server.url=http://${STAT_HOST}:${STAT_PORT}
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
@@ -12,8 +12,8 @@ spring.sql.init.mode=always
 # TODO Append connection to DB
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/ewm
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
+#spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/ewm
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
