--- a/statistics/src/main/resources/application.properties
+++ b/statistics/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.sql.init.mode=always
 # TODO Append connection to DB
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/statistic
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/statistic
+spring.datasource.url=jdbc:postgresql://localhost:5432/statistic
+#spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/statistic
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port=9090
